# toybox

./: .gitignore  pyproject.toml
fastapi-users/: main.py
fastapi-users/app/: app.py  db.py  schemas.py  users.py
misc/: earthmoversdistance.ipynb
openjij/: parallel.py
optuna/: optuna_batchopt.ipynb
