[tool.poetry]
name = "toybox"
version = "0.1.0"
description = ""
authors = ["Masamichi J. Miyama <miyama@sigmailab.com>"]

[tool.poetry.dependencies]
python = "^3.9"
optuna = "^2.10.1"
plotly = "^5.8.2"
matplotlib = "^3.5.2"
POT = "^0.8.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
jupyter = "^1.0.0"
ipywidgets = "^7.7.0"
IProgress = "^0.4"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
